--- a/Templates/Home.html
+++ b/Templates/Home.html
@@ -2,9 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title2</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <title>Title</title>
 </head>
-<body>
-
+<body class="color-red">
+<img src="images/louisdefunes.jpg">
+<div class="float-left">
+    Contrary3 to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin
+    literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney
+    College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and
+</div>
+<div class="row">
+    <div class="box col-3 padding-50">box 1</div>
+    <div class="box col-6">box 1</div>
+</div>
+<div class="clear-float">CONTENT after floats</div>
 </body>
 </html>
