--- a/Templates/Home.html
+++ b/Templates/Home.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="../css/main.css">
     <title>Title</title>
 </head>
 <body class="color-red">
-<img src="images/louisdefunes.jpg">
+<img src="../images/louisdefunes.jpg">
 <div class="float-left">
     Contrary3 to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin
     literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney
