--- a/Templates/Home.html
+++ b/Templates/Home.html
@@ -1,22 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../css/main.css">
-    <title>Title</title>
+    <style>
+        .border-box {
+            box-sizing: border-box;
+        }
+
+
+        [class*="col-"] {
+            float: left;
+            padding: 15px;
+        }
+
+        .flex-container {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: center;
+            background-color: DodgerBlue;
+        }
+
+        .flex-container > div {
+            background-color: #f1f1f1;
+            margin: 20px;
+            padding: 30px;
+            text-align: center;
+            width: 100px;
+            height: 200px;
+        }
+
+        /* For mobile phones: */
+        [class*="col-"] {
+            width: 100%;
+        }
+
+        @media only screen and (min-width: 768px) {
+            /* For desktop: */
+            .col-1 {width: 8.33%;}
+            .col-2 {width: 16.66%;}
+            .col-3 {width: 25%;}
+            .col-4 {width: 33.33%;}
+            .col-5 {width: 41.66%;}
+            .col-6 {width: 50%;}
+            .col-7 {width: 58.33%;}
+            .col-8 {width: 66.66%;}
+            .col-9 {width: 75%;}
+            .col-10 {width: 83.33%;}
+            .col-11 {width: 91.66%;}
+            .col-12 {width: 100%;}
+        }
+    </style>
 </head>
-<body class="color-red">
-<img src="../images/louisdefunes.jpg">
-<div class="float-left">
-    Contrary3 to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin
-    literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney
-    College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and
-</div>
-<div class="row">
-    <div class="box col-3 padding-50">box 1</div>
-    <div class="box col-6">box 1</div>
-</div>
-<div class="clear-float">CONTENT after floats</div>
+<body>
+    <div class="col-3"></div>
+    <div class="col-6">
+        <div class="flex-container">
+            <div class="">BODYFLYING</div>
+            <div class="">EICHEN-HOLZFASS</div>
+            <div class="">GOLDROSE</div>
+            <div class="">GOLDROSE</div>
+            <div class="">GOLDROSE</div>
+            <div class="">GOLDROSE</div>
+            <div class="">GOLDROSE</div>
+            <div class="">GOLDROSE</div>
+        </div>
+    </div>
+
 </body>
 </html>
