--- a/Templates/Home.html
+++ b/Templates/Home.html
@@ -18,7 +18,7 @@
             flex-direction: row;
             flex-wrap: wrap;
             justify-content: center;
-            background-color: DodgerBlue;
+            background-color: #e51f47;
         }
 
         .flex-container > div {
@@ -50,19 +50,40 @@
             .col-11 {width: 91.66%;}
             .col-12 {width: 100%;}
         }
+
+        .menu ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        .menu li {
+            padding: 8px;
+            margin-bottom: 7px;
+            background-color : #ff2816;
+            color: #ffffff;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+        }
     </style>
 </head>
 <body>
-    <div class="col-3"></div>
+<div class="col-3 menu">
+    <ul>
+        <li>Menu item 1</li>
+        <li>Menu item 2</li>
+        <li>Menu item 3</li>
+        <li>Menu item 4</li>
+    </ul>
+</div>
     <div class="col-6">
         <div class="flex-container">
             <div class="">BODYFLYING</div>
             <div class="">EICHEN-HOLZFASS</div>
-            <div class="">GOLDROSE</div>
-            <div class="">GOLDROSE</div>
-            <div class="">GOLDROSE</div>
-            <div class="">GOLDROSE</div>
-            <div class="">GOLDROSE</div>
+            <div class="">Bierbrauset</div>
+            <div class="">Bier-pong Tish</div>
+            <div class="">COCKTAIL Dispenser</div>
+            <div class="">BIER TANKSTELLE</div>
+            <div class="">GOLD SEKT</div>
             <div class="">GOLDROSE</div>
         </div>
     </div>
