--- a/Templates/Home.html
+++ b/Templates/Home.html
@@ -7,7 +7,6 @@
             box-sizing: border-box;
         }
 
-
         [class*="col-"] {
             float: left;
             padding: 15px;
@@ -17,17 +16,16 @@
             display: flex;
             flex-direction: row;
             flex-wrap: wrap;
-            justify-content: center;
-            background-color: DodgerBlue;
+            /*justify-content: center;*/
         }
 
         .flex-container > div {
             background-color: #f1f1f1;
             margin: 20px;
-            padding: 30px;
+            padding: 5px;
             text-align: center;
             width: 100px;
-            height: 200px;
+            /*height: 200px;*/
         }
 
         /* For mobile phones: */
@@ -50,20 +48,84 @@
             .col-11 {width: 91.66%;}
             .col-12 {width: 100%;}
         }
+        img {
+            width: 100%;
+        }
     </style>
 </head>
 <body>
-    <div class="col-3"></div>
-    <div class="col-6">
+    <div class="col-12">
         <div class="flex-container">
-            <div class="">BODYFLYING</div>
-            <div class="">EICHEN-HOLZFASS</div>
-            <div class="">GOLDROSE</div>
-            <div class="">GOLDROSE</div>
-            <div class="">GOLDROSE</div>
-            <div class="">GOLDROSE</div>
-            <div class="">GOLDROSE</div>
-            <div class="">GOLDROSE</div>
+            <div class="item">
+                <div class="item-image">
+                    <img src="../images/IMG_8004.JPG">
+                </div>
+            </div>
+            <div class="item">
+                <div class="item-image">
+                    <img src="../images/IMG_1442.JPG">
+                </div>
+            </div>
+            <div class="item">
+                <div class="item-image">
+                    <img src="../images/IMG_8004.JPG">
+                </div>
+            </div>
+            <div class="item">
+                <div class="item-image">
+                    <img src="../images/IMG_1442.JPG">
+                </div>
+            </div>
+            <div class="item">
+                <div class="item-image">
+                    <img src="../images/IMG_8004.JPG">
+                </div>
+            </div>
+            <div class="item">
+                <div class="item-image">
+                    <img src="../images/IMG_1442.JPG">
+                </div>
+            </div>
+            <div class="item">
+                <div class="item-image">
+                    <img src="../images/IMG_8004.JPG">
+                </div>
+            </div>
+            <div class="item">
+                <div class="item-image">
+                    <img src="../images/IMG_1442.JPG">
+                </div>
+            </div>
+            <div class="item">
+                <div class="item-image">
+                    <img src="../images/IMG_8004.JPG">
+                </div>
+            </div>
+            <div class="item">
+                <div class="item-image">
+                    <img src="../images/IMG_1442.JPG">
+                </div>
+            </div>
+            <div class="item">
+                <div class="item-image">
+                    <img src="../images/IMG_8004.JPG">
+                </div>
+            </div>
+            <div class="item">
+                <div class="item-image">
+                    <img src="../images/IMG_1442.JPG">
+                </div>
+            </div>
+            <div class="item">
+                <div class="item-image">
+                    <img src="../images/IMG_8004.JPG">
+                </div>
+            </div>
+            <div class="item">
+                <div class="item-image">
+                    <img src="../images/IMG_1442.JPG">
+                </div>
+            </div>
         </div>
     </div>
 
