--- a/Templates/Home.html
+++ b/Templates/Home.html
@@ -10,23 +10,22 @@
 
         [class*="col-"] {
             float: left;
-            padding: 15px;
         }
 
         .flex-container {
             display: flex;
             flex-direction: row;
             flex-wrap: wrap;
-            /*justify-content: center;*/
+            background-color: #e51f47;
         }
 
         .flex-container > div {
             background-color: #f1f1f1;
             margin: 20px;
-            padding: 5px;
+            padding: 1vh 1vw;
             text-align: center;
-            width: 100px;
-            /*height: 200px;*/
+            width: 7vw;
+            height: 12vh;
         }
 
         /* For mobile phones: */
@@ -78,7 +77,7 @@
         <li>Menu item 4</li>
     </ul>
 </div>
-    <div class="col-12">
+    <div class="col-9">
         <div class="flex-container">
             <div class="item">
                 <div class="item-image">
@@ -87,7 +86,17 @@
             </div>
             <div class="item">
                 <div class="item-image">
-                    <img src="../images/IMG_1442.JPG">
+                    <img src="../images/louisdefunes.jpg">
+                </div>
+            </div>
+            <div class="item">
+                <div class="item-image">
+                    <img src="../images/IMG_8004.JPG">
+                </div>
+            </div>
+            <div class="item">
+                <div class="item-image">
+                    <img src="../images/louisdefunes.jpg">
                 </div>
             </div>
             <div class="item">
@@ -107,7 +116,17 @@
             </div>
             <div class="item">
                 <div class="item-image">
+                    <img src="../images/louisdefunes.jpg">
+                </div>
+            </div>
+            <div class="item">
+                <div class="item-image">
                     <img src="../images/IMG_1442.JPG">
+                </div>
+            </div>
+            <div class="item">
+                <div class="item-image">
+                    <img src="../images/louisdefunes.jpg">
                 </div>
             </div>
             <div class="item">
@@ -117,7 +136,7 @@
             </div>
             <div class="item">
                 <div class="item-image">
-                    <img src="../images/IMG_1442.JPG">
+                    <img src="../images/louisdefunes.jpg">
                 </div>
             </div>
             <div class="item">
@@ -127,27 +146,7 @@
             </div>
             <div class="item">
                 <div class="item-image">
-                    <img src="../images/IMG_1442.JPG">
-                </div>
-            </div>
-            <div class="item">
-                <div class="item-image">
-                    <img src="../images/IMG_8004.JPG">
-                </div>
-            </div>
-            <div class="item">
-                <div class="item-image">
-                    <img src="../images/IMG_1442.JPG">
-                </div>
-            </div>
-            <div class="item">
-                <div class="item-image">
-                    <img src="../images/IMG_8004.JPG">
-                </div>
-            </div>
-            <div class="item">
-                <div class="item-image">
-                    <img src="../images/IMG_1442.JPG">
+                    <img src="../images/louisdefunes.jpg">
                 </div>
             </div>
         </div>
