--- a/Templates/Home.html
+++ b/Templates/Home.html
@@ -7,7 +7,6 @@
             box-sizing: border-box;
         }
 
-
         [class*="col-"] {
             float: left;
         }
@@ -22,7 +21,7 @@
         .flex-container > div {
             background-color: #f1f1f1;
             margin: 20px;
-            padding: 1vh 1vw;
+            padding: 3vh 1vw;
             text-align: center;
             width: 7vw;
             height: 12vh;
@@ -49,6 +48,10 @@
             .col-12 {width: 100%;}
         }
 
+        body {
+            font-size: 30px;
+        }
+
         .menu ul {
             list-style-type: none;
             margin: 0;
@@ -61,10 +64,13 @@
             background-color : #ff2816;
             color: #ffffff;
             box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+            font-size: 0.5em;
+            line-height: 0.5rem;
         }
 
         img {
             width: 100%;
+            height:inherit;
         }
     </style>
 </head>
