--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,22 +1,27 @@
-* {
+.border-box {
     box-sizing: border-box;
 }
 
-.color-red {
-    color: red;
+.flex-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    background-color: #e51f47;
 }
 
-.float-left {
-    float: left;
-}
-
-.box {
-    border: 1px solid black;
+.flex-container > div {
+    background-color: #f1f1f1;
+    margin: 20px;
+    padding: 3vh 1vw;
+    text-align: center;
+    width: 7vw;
+    height: 12vh;
 }
 
 /* For mobile phones: */
 [class*="col-"] {
     width: 100%;
+    float: left;
 }
 
 @media only screen and (min-width: 768px) {
@@ -35,13 +40,27 @@
     .col-12 {width: 100%;}
 }
 
-[class*="col-"] {
-    float: left;
-    padding: 15px;
-    border: 1px solid red;
+body {
+    font-size: 30px;
 }
 
-.clear-float {
-    clear: both;
+.menu ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
+.menu li {
+    padding: 8px;
+    margin-bottom: 7px;
+    background-color : #ff2816;
+    color: #ffffff;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    font-size: 0.5em;
+    line-height: 0.5rem;
+}
+
+img {
+    width: 100%;
+    height:inherit;
+}
