--- a/Templates/Home.html
+++ b/Templates/Home.html
@@ -2,77 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        .border-box {
-            box-sizing: border-box;
-        }
-
-        [class*="col-"] {
-            float: left;
-        }
-
-        .flex-container {
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            background-color: #e51f47;
-        }
-
-        .flex-container > div {
-            background-color: #f1f1f1;
-            margin: 20px;
-            padding: 3vh 1vw;
-            text-align: center;
-            width: 7vw;
-            height: 12vh;
-        }
-
-        /* For mobile phones: */
-        [class*="col-"] {
-            width: 100%;
-        }
-
-        @media only screen and (min-width: 768px) {
-            /* For desktop: */
-            .col-1 {width: 8.33%;}
-            .col-2 {width: 16.66%;}
-            .col-3 {width: 25%;}
-            .col-4 {width: 33.33%;}
-            .col-5 {width: 41.66%;}
-            .col-6 {width: 50%;}
-            .col-7 {width: 58.33%;}
-            .col-8 {width: 66.66%;}
-            .col-9 {width: 75%;}
-            .col-10 {width: 83.33%;}
-            .col-11 {width: 91.66%;}
-            .col-12 {width: 100%;}
-        }
-
-        body {
-            font-size: 30px;
-        }
-
-        .menu ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-        }
-
-        .menu li {
-            padding: 8px;
-            margin-bottom: 7px;
-            background-color : #ff2816;
-            color: #ffffff;
-            box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-            font-size: 0.5em;
-            line-height: 0.5rem;
-        }
-
-        img {
-            width: 100%;
-            height:inherit;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="../CSS/main.css">
 </head>
 <body>
 <div class="col-3 menu">
@@ -157,6 +87,17 @@
             </div>
         </div>
     </div>
-
+1. Grid layout
+<div>Many web pages are based on a grid-view, which means that the page is divided into columns:
+    A responsive grid-view often has 12 columns, and has a total width of 100%, and will shrink and expand as you resize the browser window.</div>
+2. Flexbox
+<div>The Flexible Box Layout Module, makes it easier to design flexible responsive layout structure without using float or positioning.</div>
+3. Bootstrap grid system
+<div>Bootstrap grid system uses a series of containers, rows, and columns to layout and align content. It is built with flexbox and is fully responsive.</div>
+<div></div>
+<div></div>
+<div></div>
+<div></div>
+<div></div>
 </body>
 </html>
