--- a/Templates/Home.html
+++ b/Templates/Home.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../CSS/main.css">
+    <META HTTP-EQUIV="content-type" CONTENT="text/html; charset=utf-8">
 </head>
 <body>
 <div class="col-3 menu">
@@ -13,91 +14,122 @@
         <li>Menu item 4</li>
     </ul>
 </div>
-    <div class="col-9">
-        <div class="flex-container">
-            <div class="item">
-                <div class="item-image">
-                    <img src="../images/IMG_8004.JPG">
-                </div>
+<div class="col-9">
+    <div class="flex-container">
+        <div class="item">
+            <div class="item-image">
+                <img src="../images/IMG_8004.JPG">
             </div>
-            <div class="item">
-                <div class="item-image">
-                    <img src="../images/louisdefunes.jpg">
-                </div>
+        </div>
+        <div class="item">
+            <div class="item-image">
+                <img src="../images/louisdefunes.jpg">
             </div>
-            <div class="item">
-                <div class="item-image">
-                    <img src="../images/IMG_8004.JPG">
-                </div>
+        </div>
+        <div class="item">
+            <div class="item-image">
+                <img src="../images/IMG_8004.JPG">
             </div>
-            <div class="item">
-                <div class="item-image">
-                    <img src="../images/louisdefunes.jpg">
-                </div>
+        </div>
+        <div class="item">
+            <div class="item-image">
+                <img src="../images/louisdefunes.jpg">
             </div>
-            <div class="item">
-                <div class="item-image">
-                    <img src="../images/IMG_8004.JPG">
-                </div>
+        </div>
+        <div class="item">
+            <div class="item-image">
+                <img src="../images/IMG_8004.JPG">
             </div>
-            <div class="item">
-                <div class="item-image">
-                    <img src="../images/IMG_1442.JPG">
-                </div>
+        </div>
+        <div class="item">
+            <div class="item-image">
+                <img src="../images/IMG_1442.JPG">
             </div>
-            <div class="item">
-                <div class="item-image">
-                    <img src="../images/IMG_8004.JPG">
-                </div>
+        </div>
+        <div class="item">
+            <div class="item-image">
+                <img src="../images/IMG_8004.JPG">
             </div>
-            <div class="item">
-                <div class="item-image">
-                    <img src="../images/louisdefunes.jpg">
-                </div>
+        </div>
+        <div class="item">
+            <div class="item-image">
+                <img src="../images/louisdefunes.jpg">
             </div>
-            <div class="item">
-                <div class="item-image">
-                    <img src="../images/IMG_1442.JPG">
-                </div>
+        </div>
+        <div class="item">
+            <div class="item-image">
+                <img src="../images/IMG_1442.JPG">
             </div>
-            <div class="item">
-                <div class="item-image">
-                    <img src="../images/louisdefunes.jpg">
-                </div>
+        </div>
+        <div class="item">
+            <div class="item-image">
+                <img src="../images/louisdefunes.jpg">
             </div>
-            <div class="item">
-                <div class="item-image">
-                    <img src="../images/IMG_8004.JPG">
-                </div>
+        </div>
+        <div class="item">
+            <div class="item-image">
+                <img src="../images/IMG_8004.JPG">
             </div>
-            <div class="item">
-                <div class="item-image">
-                    <img src="../images/louisdefunes.jpg">
-                </div>
+        </div>
+        <div class="item">
+            <div class="item-image">
+                <img src="../images/louisdefunes.jpg">
             </div>
-            <div class="item">
-                <div class="item-image">
-                    <img src="../images/IMG_8004.JPG">
-                </div>
+        </div>
+        <div class="item">
+            <div class="item-image">
+                <img src="../images/IMG_8004.JPG">
             </div>
-            <div class="item">
-                <div class="item-image">
-                    <img src="../images/louisdefunes.jpg">
-                </div>
+        </div>
+        <div class="item">
+            <div class="item-image">
+                <img src="../images/louisdefunes.jpg">
             </div>
         </div>
     </div>
-1. Grid layout
-<div>Many web pages are based on a grid-view, which means that the page is divided into columns:
-    A responsive grid-view often has 12 columns, and has a total width of 100%, and will shrink and expand as you resize the browser window.</div>
-2. Flexbox
-<div>The Flexible Box Layout Module, makes it easier to design flexible responsive layout structure without using float or positioning.</div>
-3. Bootstrap grid system
-<div>Bootstrap grid system uses a series of containers, rows, and columns to layout and align content. It is built with flexbox and is fully responsive.</div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
+</div>
+<p></p>
+1. <span style="font-weight: bold; text-decoration: black underline">Grid layout</span>
+<div>Viele Webseiten basieren auf einer "grid" Ansicht, was bedeutet, dass die Seite in Spalten unterteilt ist:
+    Eine reaktionsschnelle "grid" Ansicht hat häufig 12 Spalten und eine Gesamtbreite von 100%. Sie wird verkleinert und
+    vergrößert, wenn Sie die Größe des Browserfensters ändern.
+    <a href="https://css-tricks.com/snippets/css/complete-guide-grid/"
+       target="_blank">Grid layout docs</a></div>
+</div>
+<p></p>
+2. <span style="font-weight: bold; text-decoration: black underline">Flexbox</span>
+<div>Das Flexible Box Layout-Modul erleichtert das flexible Layout-Strukturen ohne Verwendung von Float oder
+    Positionierung.
+    <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Basic_Concepts_of_Flexbox"
+       target="_blank">Flex box docs</a></div>
+
+<p></p>
+3. <span style="font-weight: bold; text-decoration: black underline">Bootstrap grid system</span>
+<div>Das Bootstrap "grid system" verwendet eine Reihe von Containern, Zeilen und Spalten zum Layouten und Ausrichten von
+    Inhalten. Es ist mit Flexbox gebaut und ist "fully responsive".
+    <a href="https://getbootstrap.com/docs/4.0/layout/grid/" target="_blank">Bootstrap grid docs</a></div>
+<p></p>
+4. <span style="font-weight: bold; text-decoration: black underline">Pixels</span>
+<div>Pixels sind "absolute length units"</div>
+<div>Das "device pixel ratio"(oder CSS Pixel Ratio) ist wie das CSS das resolution vom Gerät interpretiert.
+    Ein device pixel ist das physical pixel.
+    Ein CSS pixel ist ein logisches pixel.
+</div>
+<div>Absolute length units sind nicht empfohlen, weil die Bildschirmgrößen sehr unterschiedlich sind. Sie können jedoch
+    verwendet werden, wenn das Ausgabemedium bekannt ist, z. B. für das Drucklayout.
+</div>
+<p></p>
+5. <span style="font-weight: bold; text-decoration: black underline"> %, EM, REM, VH, VW</span>
+<div>"Relative length units" geben eine Länge relativ zu einer anderen Längeneigenschaft an.</div>
+<div><span style="color: #e51f47">%</span> - Relativ zum übergeordneten Element</div>
+<div><span style="color: #e51f47">em</span> - Relativ zur Schriftgröße des Elements (2em bedeutet zweimal die Größe der
+    aktuellen Schrift)
+</div>
+<div><span style="color: #e51f47">rem</span> - Relativ zur Schriftgröße des Root-Elements</div>
+<div><span style="color: #e51f47">vh</span> - Relativ zu 1% der Höhe des "Viewport"</div>
+<div><span style="color: #e51f47">vw</span> - Relativ zu 1% der Breite des "Viewport"*</div>
+<div><span style="color: #e51f47">vmin</span> - 1vmax = 1vw or 1vh, abhängig von was kleiner ist</div>
+<div><span style="color: #e51f47">vmax</span> - 1vmax = 1vw or 1vh, abhängig von was größer ist</div>
+
 </body>
 </html>
