--- a/CSS/mediaQueries.css
+++ b/CSS/mediaQueries.css
@@ -27,9 +27,22 @@ h2, h3{
     h2,h3{margin-top: 4em}
 }
 
+#logo-small {
+    display: block;
+}
+#logo-big {
+    display: none;
+}
+
 @media only screen and (min-width: 980px) {
     .layout-row {
         width: 980px;
+    }
+    #logo-small {
+        display: none;
+    }
+    #logo-big {
+        display: block;
     }
 }
 
@@ -49,7 +62,7 @@ h1 {
 
 @media (min-width: 980px) {
     .site-title a {
-        font-size: 2.5em;
+        font-size: 2.0em;
     }
 }
 
@@ -65,7 +78,7 @@ h1 {
 
 .site-title a {
     text-decoration: none;
-    color: #333;
+    color: midnightblue;
     font-weight: 400;
 }
 
@@ -74,4 +87,44 @@ h1 {
     margin-left: auto;
     margin-right: auto;
     display: block;
+}
+
+.displayflex {
+    background-color: rgb(248,248,248);
+    border: 1px solid silver;
+    padding: 8px 4px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+}
+
+.big {
+    font-size: 16px;
+    background-color: white;
+    border-radius: 4px;
+    margin-top: 2px;
+    color: gray;
+    padding: 8px 4px;
+    line-height: 130%;
+}
+
+.flexbox-container {
+    margin-right: 1em;
+    margin-left: 1em;
+}
+
+.flexitem {
+    padding: 4px;
+    border: 1px solid white;
+    border-radius: 4px;
+    background-color: lightpink;
+    height: 5em;
+}
+
+.selbox {
+    background-color: gainsboro;
+    padding: 1ex;
+    border-bottom: 1px solid gray;
 }
